sort and comment source code and translate project filters

--- a/mqtt-api-demo.vcxproj
+++ b/mqtt-api-demo.vcxproj
@@ -123,6 +123,12 @@
       <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>XCOPY "$(TargetDir)*.exe" "." /S /Y</Command>
+    </PostBuildEvent>
+    <PostBuildEvent>
+      <Message>Copy exe to main dir</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
