--- a/mqtt-api-demo.vcxproj.filters
+++ b/mqtt-api-demo.vcxproj.filters
@@ -1,64 +1,64 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Quelldateien">
+    <Filter Include="Source files">
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="Headerdateien">
+    <Filter Include="Header files">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
     </Filter>
-    <Filter Include="Ressourcendateien">
+    <Filter Include="Resource files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="mqtt-api-demo.cpp">
-      <Filter>Quelldateien</Filter>
+      <Filter>Source files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MQTTProperties.h">
-      <Filter>Headerdateien</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="MQTTReasonCodes.h">
-      <Filter>Headerdateien</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="MQTTSubscribeOpts.h">
-      <Filter>Headerdateien</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="MQTTAsync.h">
-      <Filter>Headerdateien</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="MQTTClient.h">
-      <Filter>Headerdateien</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="MQTTClientPersistence.h">
-      <Filter>Headerdateien</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="MQTTExportDeclarations.h">
-      <Filter>Headerdateien</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="jsmn.h">
-      <Filter>Headerdateien</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="paho-mqtt3a.dll">
-      <Filter>Headerdateien</Filter>
+      <Filter>Header files</Filter>
     </None>
     <None Include="paho-mqtt3c.dll">
-      <Filter>Headerdateien</Filter>
+      <Filter>Header files</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
     <Library Include="paho-mqtt3a.lib">
-      <Filter>Headerdateien</Filter>
+      <Filter>Header files</Filter>
     </Library>
     <Library Include="paho-mqtt3c.lib">
-      <Filter>Headerdateien</Filter>
+      <Filter>Header files</Filter>
     </Library>
   </ItemGroup>
 </Project>
